--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -8,8 +8,8 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical"
-    tools:context="HomePage">
-
+    tools:context="HomePage"
+    app:navGraph="@navigation/nav_graph">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
