--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -79,28 +79,28 @@
 
             <ImageView
                 android:id="@+id/Switch_off"
-                android:layout_width="154dp"
+                android:layout_width="105dp"
                 android:layout_height="87dp"
                 android:src="@drawable/switchoff"
-                android:translationX="240dp"
-                android:translationY="-35dp" />
+                android:translationX="12dp"
+                android:translationY="-65dp" />
 
             <TextView
                 android:id="@+id/Switch_off_Info"
                 android:layout_width="233dp"
-                android:layout_height="73dp"
+                android:layout_height="83dp"
                 android:gravity="left"
                 android:text="When the switch is positioned to the left and lacks a purple color, the switch tells us that the statement is false. "
                 android:textColor="@color/white"
                 android:textSize="15sp"
-                android:translationX="10dp"
-                android:translationY="-120dp"
+                android:translationX="150dp"
+                android:translationY="-140dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <TextView
                 android:id="@+id/Switch_on_info"
                 android:layout_width="244dp"
-                android:layout_height="61dp"
+                android:layout_height="wrap_content"
                 android:gravity="left"
                 android:text="When the switch is positioned to the right with a purple color, it us that that the statement is true."
                 android:textColor="@color/white"
@@ -114,7 +114,7 @@
                 android:layout_width="125dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/switchon"
-                android:translationX="10dp"
+                android:translationX="0dp"
                 android:translationY="-180dp" />
 
             <ImageView
@@ -122,19 +122,19 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:src="@drawable/plus"
-                android:translationX="270dp"
-                android:translationY="-180dp" />
+                android:translationX="25dp"
+                android:translationY="-160dp"  />
 
             <TextView
                 android:id="@+id/Plus_info"
-                android:layout_width="248dp"
+                android:layout_width="204dp"
                 android:layout_height="63dp"
                 android:gravity="left"
                 android:text="Use the plus icon to show the increase of that statement."
                 android:textColor="@color/white"
                 android:textSize="15sp"
-                android:translationX="10dp"
-                android:translationY="-240dp"
+                android:translationX="150dp"
+                android:translationY="-220dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <ImageView
@@ -142,8 +142,8 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:src="@drawable/minus"
-                android:translationX="30dp"
-                android:translationY="-235dp" />
+                android:translationX="25dp"
+                android:translationY="-205dp" />
 
             <TextView
                 android:id="@+id/Minus_info"
@@ -154,7 +154,7 @@
                 android:textColor="@color/white"
                 android:textSize="15sp"
                 android:translationX="150dp"
-                android:translationY="-305dp"
+                android:translationY="-270dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <Button
@@ -164,8 +164,8 @@
                 android:layout_marginTop="36dp"
                 android:backgroundTint="#3280B4"
                 android:text="@string/next"
-                android:translationX="265dp"
-                android:translationY="-320dp"
+                android:translationX="10dp"
+                android:translationY="-280dp"
                 app:cornerRadius="100dp" />
 
             <TextView
@@ -176,8 +176,8 @@
                 android:text="The Next button will transport you to the next page, leading to a page titled End Game."
                 android:textColor="@color/white"
                 android:textSize="15sp"
-                android:translationX="10dp"
-                android:translationY="-370dp"
+                android:translationX="150dp"
+                android:translationY="-330dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <Button
@@ -188,19 +188,19 @@
                 android:backgroundTint="#3280B4"
                 android:text="@string/previous"
                 android:translationX="10dp"
-                android:translationY="-400dp"
+                android:translationY="-355dp"
                 app:cornerRadius="100dp" />
 
             <TextView
                 android:id="@+id/Previous_info"
                 android:layout_width="244dp"
-                android:layout_height="54dp"
+                android:layout_height="39dp"
                 android:gravity="left"
                 android:text="The Previous button will take you back to the Auto page."
                 android:textColor="@color/white"
                 android:textSize="15sp"
                 android:translationX="150dp"
-                android:translationY="-440dp"
+                android:translationY="-395dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <TextView
@@ -211,20 +211,20 @@
                 android:text="Broke?"
                 android:textColor="@color/white"
                 android:textSize="30sp"
-                android:translationX="280dp"
-                android:translationY="-430dp"
+                android:translationX="10dp"
+                android:translationY="-355dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <TextView
                 android:id="@+id/Broke_info"
                 android:layout_width="257dp"
-                android:layout_height="68dp"
+                android:layout_height="43dp"
                 android:gravity="left"
                 android:text="Broke means the robot broke and didn't work."
                 android:textColor="@color/white"
                 android:textSize="15sp"
-                android:translationX="10dp"
-                android:translationY="-490dp"
+                android:translationX="150dp"
+                android:translationY="-410dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <TextView
@@ -236,43 +236,43 @@
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 android:translationX="10dp"
-                android:translationY="-470dp"
+                android:translationY="-368dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <TextView
                 android:id="@+id/Defense_info"
                 android:layout_width="244dp"
-                android:layout_height="54dp"
+                android:layout_height="65dp"
                 android:gravity="left"
-                android:text="Broke means the robot broke and didn't work."
+                android:text="Defense means that if the robot did any kind of defense to stop the other team. "
                 android:textColor="@color/white"
                 android:textSize="15sp"
                 android:translationX="160dp"
-                android:translationY="-524dp"
+                android:translationY="-424dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <TextView
                 android:id="@+id/Ground_info"
-                android:layout_width="176dp"
-                android:layout_height="116dp"
+                android:layout_width="207dp"
+                android:layout_height="60dp"
                 android:gravity="left"
-                android:text="Pick up from the ground means if it has picked up notes from the ground. "
+                android:text="Pick up from the ground means if the robot has picked up notes from the ground. "
                 android:textColor="@color/white"
                 android:textSize="15sp"
-                android:translationX="10dp"
-                android:translationY="-510dp"
+                android:translationX="200dp"
+                android:translationY="-383dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <TextView
                 android:id="@+id/Ground"
-                android:layout_width="205dp"
-                android:layout_height="105dp"
+                android:layout_width="181dp"
+                android:layout_height="75dp"
                 android:gravity="left"
                 android:text="Pick up from ground?"
                 android:textColor="@color/white"
                 android:textSize="30sp"
-                android:translationX="190dp"
-                android:translationY="-640dp"
+                android:translationX="10dp"
+                android:translationY="-450dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <TextView
@@ -284,81 +284,81 @@
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 android:translationX="10dp"
-                android:translationY="-640dp"
+                android:translationY="-423dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <TextView
                 android:id="@+id/Source_Pick_up_info"
                 android:layout_width="205dp"
-                android:layout_height="105dp"
+                android:layout_height="82dp"
                 android:gravity="left"
-                android:text="Pick up from the source means if it picked up notes from the person handing them out for the wall. "
+                android:text="Pick up from the source means if the robot has picked up notes from the person handing them out for the wall. "
                 android:textColor="@color/white"
-                android:textSize="17sp"
-                android:translationX="190dp"
-                android:translationY="-730dp"
+                android:textSize="15sp"
+                android:translationX="200dp"
+                android:translationY="-510dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <TextView
                 android:id="@+id/Amp_Pick_up"
-                android:layout_width="205dp"
+                android:layout_width="wrap_content"
                 android:layout_height="42dp"
                 android:gravity="left"
                 android:text="Notes in Amp"
                 android:textColor="@color/white"
                 android:textSize="28sp"
-                android:translationX="220dp"
-                android:translationY="-730dp"
+                android:translationX="10dp"
+                android:translationY="-485dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <TextView
                 android:id="@+id/Amp_Pick_up_info"
                 android:layout_width="205dp"
-                android:layout_height="105dp"
+                android:layout_height="76dp"
                 android:gravity="left"
-                android:text="Notes in Amp means if they scored in the Amp which is needed to amplify the speaker. "
+                android:text="Notes in Amp means if the robot scored in the Amp which is needed to amplify the speaker. "
                 android:textColor="@color/white"
-                android:textSize="17sp"
-                android:translationX="10dp"
-                android:translationY="-780dp"
+                android:textSize="15sp"
+                android:translationX="200dp"
+                android:translationY="-520dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <TextView
                 android:id="@+id/Note_in_Speaker"
-                android:layout_width="205dp"
-                android:layout_height="105dp"
+                android:layout_width="176dp"
+                android:layout_height="153dp"
                 android:gravity="left"
                 android:text="Notes in Speaker Amplified/Unamplified"
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 android:translationX="10dp"
-                android:translationY="-570dp"
+                android:translationY="-520dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <TextView
                 android:id="@+id/Note_in_Speaker_info"
                 android:layout_width="205dp"
-                android:layout_height="105dp"
+                android:layout_height="125dp"
                 android:gravity="left"
                 android:text="Notes in Speaker means scoring in the big structure in the middle with two categories for Amplified and another for non-Amplified scoring. "
                 android:textColor="@color/white"
-                android:textSize="17sp"
-                android:translationX="190dp"
-                android:translationY="-640dp"
+                android:textSize="15sp"
+                android:translationX="200dp"
+                android:translationY="-665dp"
                 tools:ignore="HardcodedText,RtlHardcoded" />
 
             <TextView
                 android:id="@+id/End_Game"
+                android:text="End Game"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="73dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="-10dp"
                 android:gravity="center"
-                android:text="End Game"
                 android:textColor="@color/white"
-                android:textSize="32sp"
+                android:textSize="42sp"
                 android:translationX="0dp"
-                android:translationY="-100dp"
+                android:translationY="-450dp"
                 tools:ignore="HardcodedText" />
 
         </LinearLayout>
