--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -171,7 +171,7 @@
                 android:layout_width="244dp"
                 android:layout_height="71dp"
                 android:gravity="left"
-                android:text="The Next button will transport you to the next page."
+                android:text="The Next button will transport you to the next page. (try me →)"
                 android:textColor="@color/white"
                 android:textSize="17sp"
                 android:translationX="10dp"
@@ -192,9 +192,9 @@
             <TextView
                 android:id="@+id/Previous_info"
                 android:layout_width="244dp"
-                android:layout_height="54dp"
+                android:layout_height="66dp"
                 android:gravity="left"
-                android:text="The Previous button will take you back to your previous page."
+                android:text="The Previous button will take you back to your previous page. (← try me)"
                 android:textColor="@color/white"
                 android:textSize="17sp"
                 android:translationX="150dp"
@@ -205,7 +205,7 @@
                 android:id="@+id/End_Game"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="0dp"
                 android:layout_marginBottom="-10dp"
                 android:gravity="center"
                 android:text="End Game"
