--- a/app/src/main/res/layout/fragment_second2.xml
+++ b/app/src/main/res/layout/fragment_second2.xml
@@ -77,7 +77,7 @@
             android:id="@+id/title"
             android:layout_width="260dp"
             android:layout_height="wrap_content"
-            android:text="ENDGAME"
+            android:text="End Game"
             android:textSize="38dp"
             android:translationX="150dp"
             android:translationY="50dp" />
