Tele-op changes

--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -61,7 +61,7 @@
                 android:layout_width="243dp"
                 android:layout_height="76dp"
                 android:gravity="left"
-                android:text="The wolf logo switches the backdrop, toggling between a white background and a black background. "
+                android:text="The wolf logo switches the backdrop, toggling between a white and black mode. "
                 android:textColor="@color/white"
                 android:textSize="15sp"
                 android:translationX="150dp"
@@ -129,7 +129,7 @@
                 android:layout_width="204dp"
                 android:layout_height="63dp"
                 android:gravity="left"
-                android:text="Use the plus icon to show the increase of that statement."
+                android:text="Use the plus icon to show the increase of the value."
                 android:textColor="@color/white"
                 android:textSize="15sp"
                 android:translationX="150dp"
@@ -148,7 +148,7 @@
                 android:layout_width="246dp"
                 android:layout_height="65dp"
                 android:gravity="left"
-                android:text="Use the minus icon to show the decreasing that the statement is having."
+                android:text="Use the minus icon to show the decreasing that the value is having."
                 android:textColor="@color/white"
                 android:textSize="15sp"
                 android:translationX="150dp"
@@ -252,7 +252,7 @@
                 android:layout_width="207dp"
                 android:layout_height="60dp"
                 android:gravity="left"
-                android:text="Pick up from the ground means if the robot has picked up notes from the ground. "
+                android:text="Pick up from the ground means that the robot has picked up notes from the ground. "
                 android:textColor="@color/white"
                 android:textSize="15sp"
                 android:translationX="200dp"
@@ -288,7 +288,7 @@
                 android:layout_width="205dp"
                 android:layout_height="82dp"
                 android:gravity="left"
-                android:text="Pick up from the source means if the robot has picked up notes from the person handing them out for the wall. "
+                android:text="Pick up from the source means that the robot has picked up notes from the person handing them out for the wall. "
                 android:textColor="@color/white"
                 android:textSize="15sp"
                 android:translationX="200dp"
